test/src/e2e_vm_tests/test_programs/should_fail/insufficient_type_info/src/main.sw
script;

mod lib;

use ::lib::MyOption::{self, *};

fn foo<T>() {
    let x = __size_of::<T>();
}

fn main() {
    foo();

    None::<T>;
}
